@@ -567,6 +567,14 @@
 
 2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Various: Stop using GtkBox padding, fill and expand child properties
+
+	* src/information-dialog.c (balsa_information_list):
+	* src/main-window.c (bw_create_index_widget), (bw_set_panes),
+	(balsa_window_new), (bw_notebook_label_new), (bw_find_real):
+
+2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Various: restore filtering in a mailbox that is not currently
 	being viewed.
 
